11- Update UserInfo Class
12. Added Formats class (for converting time and data unit in houam readable form)
13. Update the Formats class adding comment to friendlyTime method
14. Update Formats class fix logical mistake.
15. Added Identicon library.
16. Added FTP class.
17. Added comments to Validation system.
18. Added ipv6,alpha and subnet validation rule method.
19. Fix bug in StickyRule validation class.
20. Added FileHandling class.
21. Update Logger class by using new FileHandling class.
22. Update ROOT class fix logs route.
23. Added Avatar package.
24. Fix issue router cached either router cache is set to off.
25. Update router Cache system.
26. Added Model class for easily access to models.
27. Added model function
   - Now you can access any model like <?php model('name')->method() //or model('folder\model')->method()?>	
28. Update auth class added delete method/member function for delete the user special thanks (https://zestframework.xyz/community/view/uh5UOqe).
29. Added save method in Avatar and Identicon class.
30. Update Files class
    - Code optimization.
    - Update methods 
    - Delete useless code.
31. Move FileHandling class to Files/
32. Update Formats class Added formatSeconds for converting time to h:m:s.
33. Update User class fix typo mistake.
34. Update Signup,Signin class fix issue send verification email either not set to true.
35. Update Component Router class code optimization.
36. Update Component Controller class code optimization (reuse of controller class). 	
37. Update Validation Handler class allow users to translate the defaults msgs of validations.
38. Update FileHandling class fix logical mistake.
39. Added two functions in helper.php (read and write file).
40. Added pagination class and pagination function.
41. Update Pagination class fix logical mistake.
42. Fix typo in language string class Local to Locale.
43. Fix typo mistake in Files class.
44. Update FTP class fix typo.